# postereo

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 1_post.sql
backend/src/: app_state.rs  config.rs  lib.rs  main.rs
backend/src/http/: error.rs  mod.rs  posts.rs  www.rs
frontend/: Cargo.toml
frontend/src/: api.rs  error.rs  lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
