[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# Framework and async runtime
axum = { version = "0.6.18", features = ["json", "macros"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["fs"] }

# Error management
anyhow = "1.0.71"
thiserror = "1.0.40"

# Configuration
clap = { version = "4.3.10", features = ["derive", "env"] }
dotenv = "0.15.0"

# Logging
log = "0.4.19"
pretty_env_logger = "0.5.0"

# Data management
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }

# Database
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
